fix: made clear option in search input to be center aligned

--- a/web/src/styles/app.scss
+++ b/web/src/styles/app.scss
@@ -539,6 +539,9 @@
       background-color: red !important;
     }
   }
+  .q-field__append{
+    padding-top: 8px !important;
+  }
 }
 
 .o2-search-input-light{
